src/recipe/snapshots/rattler_build__recipe__parser__tests__jinja_sequence.snap
---
source: src/recipe/parser.rs
expression: recipe
---
schema_version: 1
context: {}
package:
  name: blib
  version: 0.1.0
build:
  number: 0
  script: test succeeded
requirements: {}
